remove more cringe

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>u can reach me on discord @Juliapixel if u want to ig</p>
     <p>also check out my <a href="https://github.com/juliapixel/">github</a> woah</p>
     <p>or by <a href="mailto://homepage@juliapixel.com">email</a> if ur into that sorta stuff</p>
-    <p>all astral projections will be ignored and sent to my spam folder</p>
+    <p>don't be mean to me or i'll cry ;&lpar;</p>
     <div class="toogay">
         <img src="/getoutofmyhead.webp" id="scream" alt="little cat screaming in agony someone help him" title="waaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahh"/>
         <div class="pride">🏳️‍⚧️</div>
