--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
     <script src='main.js' defer></script>
 </head>
 <body>
-    <img id="uuh" src="/uuh.webp" alt="epic cat!!!1!" title="cool cat!" />
-    <p>waoh</p>
-    <p>u can reach me on discord @Juliapixel if u want to ig</p>
-    <p>also check out my <a href="https://github.com/juliapixel/">github</a> woah</p>
-    <p>or by <a href="mailto://homepage@juliapixel.com">email</a> if ur into that sorta stuff</p>
-    <p>don't be mean to me or i'll cry ;&lpar;</p>
-    <div class="toogay">
-        <img src="/getoutofmyhead.webp" id="scream" alt="little cat screaming in agony someone help him" title="waaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahh"/>
-        <div class="pride">🏳️‍⚧️</div>
+    <div class="main-stuff">
+        <img id="uuh" src="/uuh.webp" alt="epic cat!!!1!" title="cool cat!" />
+        <h1>yo</h1>
+        <p>
+            i'm Julia (she/her), a 19yo "software developer" from
+            <span title="please help">brazil</span>
+        </p>
+        <p>u can reach me on discord @Juliapixel if u want to</p>
+        <p>
+            also check out my
+            <a href="https://github.com/juliapixel/">github</a>
+            woah
+        </p>
+        <p>
+            or by
+            <a href="mailto://homepage@juliapixel.com">email</a>
+            if ur into that sorta stuff
+        </p>
+        <br/>
+        <div class="toogay">
+            be gay<div class="pride">🏳️‍⚧️</div>
+        </div>
     </div>
 </body>
 </html>
