add blur to cat

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="main-stuff">
+        <img id="uuh" class="bloom" src="/uuh.webp" alt="epic cat!!!1!" title="cool cat!" />
         <img id="uuh" src="/uuh.webp" alt="epic cat!!!1!" title="cool cat!" />
         <h1>yo</h1>
         <p>
