add meta tags, with card stuff yea

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%sveltekit.assets%/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="author" content="Juliapixel" />
+        <meta name="description" content="Juliapixel's homepage, with some stuff in it!" />
+        <meta name="color-scheme" content="light dark" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Julia's stuff" />
+        <meta name="twitter:image" content="https://juliapixel.com/uuh.webp" />
+        <meta name="twitter:description" content="it's her stuff!!!" />
         <title>Julia's stuff</title>
         %sveltekit.head%
     </head>
